src/np222kk/dv507/a2/test/cases/positive/test_unary.ofp
void main() {
    int x = -1;
    float f = -1.0;
    x = -(-1*-(1+-1));
}