src/np222kk/dv507/a2/test/cases/negative/test_binoperator_01.ofp
void main() {
    bool b = 1 + 2.0;
}